# tlpi

./: ._.idea  ._tlpi-dist  README.md
my_code/: ._.idea  ._CMakeLists.txt  ._cmake-build-debug  ._malloc  ._process  ._thread  CMakeLists.txt
my_code/malloc/: ._program_break_1.c  ._program_break_2.c  1  a.out  hello.c  program_break_1.c  program_break_2.c
my_code/process/: ._fork_1.c  Makefile  exec_1.c  fork_1  fork_1.c  varible_1.sh
my_code/thread/: ._thread_1.c  thread_1  thread_1.c
my_code/time/: Makefile  get_calendartime  get_calendartime.c
my_code/timerandsleep/: Makefile  timer_1  timer_1.c
tlpi-dist/: ._.idea  Makefile
tlpi-dist/acl/: acl_update  acl_view
tlpi-dist/altio/: demo_sigio  epoll_flags_fork  epoll_input  multithread_epoll_wait  poll_pipes  select_mq  self_pipe  t_select
tlpi-dist/cap/: cap_launcher  cap_text  check_password_caps  demo_file_caps  show_secbits  t_cap_get_file  t_cap_get_pid  t_cap_set_file
tlpi-dist/daemons/: daemon_SIGHUP  t_syslog  test_become_daemon
tlpi-dist/dirs_links/: bad_symlink  file_type_stats  list_files  list_files_readdir_r  nftw_dir_tree  t_dirbasename  t_unlink  view_symlink
tlpi-dist/filebuff/: direct_read  mix23_linebuff  mix23io  write_bytes  write_bytes_fdatasync  write_bytes_fsync  write_bytes_o_sync
tlpi-dist/fileio/: Makefile  atomic_append  bad_exclusive_open  copy  large_file  multi_descriptors  my_open_err  my_open_err.c  seek_io  t_readv  t_truncate
tlpi-dist/filelock/: i_fcntl_locking  t_flock
tlpi-dist/files/: chiflag  t_chown  t_stat  t_umask  t_utime  t_utimes
(+256 files in other folders)
